--- a/styles.css
+++ b/styles.css
@@ -4,6 +4,9 @@ body {
     display: flex;
     justify-content: center;
     align-items: center;
+    font-family: 'Arial', sans-serif;
+    line-height: 1.6;
+    background-color: #f5f5f5;
 }
 .container {
     height: 100vh;
@@ -12,6 +15,46 @@ body {
     justify-content: center;
     align-items: center;
     
+}
+
+h2 {
+    font-size: 1.5rem;
+    margin-bottom: 1rem;
+    text-align: center;
+}
+
+.submit {
+    background-color: #333;
+    border: none;
+    color: #fff;
+    padding: 0.5rem 1rem;
+    font-size: 1rem;
+    cursor: pointer;
+    margin-bottom: 1rem;
+}
+
+.submit:hover {
+    background-color: #444;
+}
+
+.form-container {
+    background-color: #fff;
+    padding: 1rem;
+    border-radius: 5px;
+    box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+    margin: 0 1rem;
+}
+
+form {
+    display: flex;
+    flex-direction: column;
+}
+
+input {
+    border: 1px solid #ccc;
+    padding: 0.5rem 1rem;
+    margin-bottom: 1rem;
+    font-size: 1rem;
 }
 
 .section {
@@ -45,16 +88,9 @@ body {
     border-radius: 20px;
 }
 
-.floating-button {
+#sign-out-container {
     position: fixed;
     bottom: 20px;
     left: 20px;
     padding: 12px 24px;
-    font-size: 16px;
-    font-weight: bold;
-    border: none;
-    border-radius: 4px;
-    cursor: pointer;
-    background-color: #2196f3;
-    color: white;
   }
